Created a scaffolder container

--- a/src/app/mixins.less
+++ b/src/app/mixins.less
@@ -22,17 +22,17 @@
     }
   }
 
-  .scaffolder__menu__item.active a,
-  .scaffolder__menu__item.active a:hover {
+  .scaffolder__container__menu__item.active a,
+  .scaffolder__container__menu__item.active a:hover {
     color: @active-color;
     background: @active-bg;
   }
-  .scaffolder__menu__item a:hover {
+  .scaffolder__container__menu__item a:hover {
     color: @hover-color;
     background: @hover-bg;
   }
 
-  .scaffolder__title {
+  .scaffolder__container__title {
     color:mix(@active-bg, @iframe-color);
   }
 }
