Moved material css

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -1,3 +1,5 @@
+// Vendors
+@import (less) "../../bower_components/angular-material/angular-material.css";
 @import "bootstrap.loader.less";
 // Internal
 @import "mixins.less";
