Added fork button

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -168,6 +168,9 @@
               <a class="btn btn-link" href="{{getViewUrl()}}" target="_blank" tooltip="Open the iframe in a new window">
                 <i class="glyphicon glyphicon-new-window"></i>
               </a>
+              <a class="btn btn-link" tooltip="Fork this mosaic" ui-sref="fork(getViewParams())">
+                <i class="glyphicon glyphicon-edit"></i>
+              </a>
             </span>
           </div>
         </div>
