--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -168,7 +168,7 @@
               <a class="btn btn-link" href="{{getViewUrl()}}" target="_blank" tooltip="Open the iframe in a new window">
                 <i class="glyphicon glyphicon-new-window"></i>
               </a>
-              <a class="btn btn-link" tooltip="Fork this mosaic" ui-sref="fork(getViewParams())">
+              <a class="btn btn-link" tooltip="Permalink to edit the same mosaic" ui-sref="fork(getViewParams())">
                 <i class="glyphicon glyphicon-edit"></i>
               </a>
             </span>
