--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -86,10 +86,10 @@
       <div class="panel editor__step panel-default" ng-class="{ 'editor__step--disable': !settings.urls.length }">
         <div class="editor__step__label"></div>
         <div class="panel-body">
-          <div class="pull-right dropdown">
+          <div class="pull-right" dropdown>
             <span class="btn-group">
               <i class="scaffolder--{{settings.theme}}__preview editor__step__theme-preview disabled btn btn-xs"></i>
-              <button class="btn btn-default btn-xs dropdown-toggle">
+              <button class="btn btn-default btn-xs" dropdown-toggle>
                 {{ themes[settings.theme] }} &nbsp;<i class="caret"></i>
               </button>
             </span>
