Added grayscale to disabled steps

--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -20,6 +20,8 @@
 
     &--disable {
       opacity:0.2;
+      filter:grayscale(1);
+      
       &:after {
         position:absolute;
         content:"";
