--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -175,7 +175,7 @@
           </div>
         </div>
         <div class="editor__preview__scaffolder">
-          <scaffolder urls="settings.urls" iframe-layout="settings.layout" theme="settings.theme" />
+          <scaffolder options="settings" />
         </div>
       </div>
     </div>
