--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -114,33 +114,39 @@
           <p>
             <textarea class="form-control" readonly>{{getViewIframe()}}</textarea>
           </p>
-          <div>
-            <div class="pull-left editor__step__iframe-label">
-              <strong>Change the size&nbsp;</strong><br />
-              <label class="editor__step__iframe-label__fluid">
-                <input type="checkbox" ng-model="useFluid" />
-                Use a fluid width
-              </label>
+          <a class="editor__step__show-more-options" ng-class="{ 'editor__step__show-more-options--active': showMoreOptions}" ng-click="showMoreOptions = !showMoreOptions">
+            <i class="caret"></i>&nbsp;
+            More options
+          </a>
+          <div ng-show="showMoreOptions">
+            <div>
+              <div class="pull-left editor__step__iframe-label">
+                <strong>Change the size&nbsp;</strong><br />
+                <label class="editor__step__iframe-label__fluid">
+                  <input type="checkbox" ng-model="useFluid" />
+                  Use a fluid width
+                </label>
+              </div>
+              <div class="text-right editor__step__iframe-size">
+                <input type="number" ng-disabled="useFluid" ng-model="width" min="50" class="form-control input-sm editor__step__iframe-size__size" />
+                x
+                <input type="number" ng-model="height" min="50" class="form-control input-sm editor__step__iframe-size__size" />
+              </div>
             </div>
-            <div class="text-right editor__step__iframe-size">
-              <input type="number" ng-disabled="useFluid" ng-model="width" min="50" class="form-control input-sm editor__step__iframe-size__size" />
-              x
-              <input type="number" ng-model="height" min="50" class="form-control input-sm editor__step__iframe-size__size" />
-            </div>
-          </div>
-          <br class="clearfix" />
-          <div class="row">
-            <div class="col-xs-6">
-              <label>
-                Choose the 1<sup>st</sup> iframe
-              </label>
-            </div>
-            <div class="col-xs-6">
-              <select ng-model="options.active" class="form-control input-sm">
-                <option value="{{$index}}" ng-repeat="url in options.urls track by $index">
-                  {{scaffolder.label($index)}}
-                </option>
-              </select>
+            <br class="clearfix" />
+            <div class="row">
+              <div class="col-xs-6">
+                <label>
+                  Choose the 1<sup>st</sup> iframe
+                </label>
+              </div>
+              <div class="col-xs-6">
+                <select ng-model="options.active" class="form-control input-sm">
+                  <option value="{{$index}}" ng-repeat="url in options.urls track by $index">
+                    {{scaffolder.label($index)}}
+                  </option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
