Added generic footer

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -22,5 +22,7 @@
             ng-show="scaffolder.isVisible($index)"
             ng-repeat="url in options.urls track by $index"></iframe>
   </div>
-  <div class="scaffolder__footer"></div>
+  <div class="scaffolder__footer">
+    Built with <a href="//pirhoo.github.io/iframe-scaffolder/" target="_blank">Iframe Scaffolder</a>
+  </div>
 </div>
