Added angular socialshare

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -24,5 +24,15 @@
   </div>
   <div class="scaffolder__footer">
     Built with <a href="//pirhoo.github.io/iframe-scaffolder/" target="_blank">Iframe Scaffolder</a>
+    <div class="scaffolder__footer__sharing pull-right hidden">
+      <a socialshare
+         socialshare-provider="twitter">
+        T
+      </a>
+      <a socialshare
+         socialshare-provider="facebook">
+        F
+      </a>
+    </div>
   </div>
 </div>
