--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -90,7 +90,7 @@
     .pull-left, .pull-right {
       position:relative;
       a:after, a:before {
-        font-family: "Glyphicons Halflings";
+        font-family: "FontAwesome";
         font-size:0.9em;
         position: absolute;
         top:50%;
@@ -101,14 +101,14 @@
     .pull-left a {
       padding-left:30px;
       &:before {
-        content: "\e079";
+        content: "\f053";
         left:10px;
       }
     }
     .pull-right a {
       padding-right:30px;
       &:after {
-        content: "\e080";
+        content: "\f054";
         right:10px;
       }
     }
