--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -30,7 +30,7 @@
                   Edit label
                 </button>
                 <button type="button" class="btn btn-default" ng-click="removeUrl($index)" tooltip="Remove this iframe">
-                  <i class="fa fa-trash"></i>
+                  <i class="fa fa-trash-o"></i>
                 </button>
               </div>
               <a ng-href="{{scaffolder.url($index, true)}}" target="_blank" class="editor__step__url__value">
