--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -193,7 +193,7 @@
               <a class="btn btn-link" href="{{getViewUrl()}}" target="_blank" tooltip="Open the iframe in a new window">
                 <i class="fa fa-external-link"></i>
               </a>
-              <a class="btn btn-link" tooltip="Permalink to edit the same mosaic" ui-sref="fork(getViewParams())">
+              <a class="btn btn-link" tooltip="Permalink to edit the same mosaic" ui-sref="fork(scaffolder.serialized())">
                 <i class="fa fa-edit"></i>
               </a>
             </span>
