Added per-view sharing

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -28,6 +28,7 @@
       Share this view&nbsp;
       <a socialshare
          socialshare-text="{{ scaffolder.getActive().label }}"
+         socialshare-url="{{ scaffolder.viewUrl(scaffolder.active) }}"
          socialshare-provider="twitter">
         <i class="fa fa-fw fa-twitter"></i>
         <span class="sr-only">Twitter</span>
