--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -148,6 +148,19 @@
     &:hover {
       filter:grayscale(0);
     }
+
+    &__sharing {
+
+      &__twitter,
+      &__twitter:hover {
+        color:#55ACEE;
+      }
+
+      &__facebook,
+      &__facebook:hover {
+        color:#3F4B9A;
+      }
+    }
   }
 
 
