Updated dialog name

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -35,7 +35,7 @@
         <span class="sr-only">Twitter</span>
       </a>
       <a socialshare
-         socialshare-caption="{{ scaffolder.getActive().label }}"
+         socialshare-name="{{ scaffolder.getActive().label }}"
          socialshare-url="{{ scaffolder.viewUrl(scaffolder.active) }}"
          socialshare-provider="facebook"
          socialshare-type="feed"
