--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -44,7 +44,7 @@
          socialshare-ref=""
          socialshare-display="popup"
          socialshare-via="883059891808177"
-         socialshare-redirect-uri="https:/facebook.com"
+         socialshare-redirect-uri="https://facebook.com"
          class="scaffolder__footer__sharing__facebook">
         <i class="fa fa-fw fa-facebook"></i>
         <span class="sr-only">Facebook</span>
