Added option to set facebookAppId

--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -43,7 +43,7 @@
          socialshare-from=""
          socialshare-ref=""
          socialshare-display="popup"
-         socialshare-via="883059891808177"
+         socialshare-via="%%FACEBOOK_APP_ID%%"
          socialshare-redirect-uri="https://facebook.com"
          class="scaffolder__footer__sharing__facebook">
         <i class="fa fa-fw fa-facebook"></i>
